--- a/posts/bc-liquor-market-review-2023-06-pt02-quarterly-trends/index.qmd
+++ b/posts/bc-liquor-market-review-2023-06-pt02-quarterly-trends/index.qmd
@@ -2,7 +2,7 @@
 title: "BC Liquor Sales Analysis: Quarter-of-Year Patterns 2015-2023"
 author: John Yuill
 date: '2023-11-19'
-categories: [liquor statas, reporting, analysis]
+categories: [liquor stats, reporting, analysis]
 description-meta: BC Liquor Market Review data exploration and analysis covering the years 2016 to 2023, focusing on quarter-level trends, patterns and observations.
 draft: false
 image: bc-lmr-quarter-pattern.png 
@@ -132,7 +132,8 @@ Overlay of \$ sales data for quarter of each year to see overall trends:
 -   Q4 (Jan-Feb-Mar) by far the slowest period.
 
 ```{r}
-ch_title <- "$ Sales Comparison by Quarter (fiscal yr*)"
+#| fig-cap: BC LDB fiscal yr end Mar 31, so Q1=Apr-May-Jun, and so on; black line = average.
+ch_title <- "$ Sales Comparison by Quarter (fiscal yr end Mar 31)"
 plot <- trend_ttl_qtr %>% ggplot(aes(x=qtr, y=netsales, color=factor(fyr), group=fyr))+
   geom_line()+
   geom_point()+
@@ -143,9 +144,7 @@ ggplotly(plot)
   
 ```
 
-\\\\\* BC LDB fiscal yr runs Apr - Mar, so Q1=Apr-May-Jun, and so on; black line = average.
-
-The drop from Q3 to Q4 is the only consistent pattern across the years looked at. Relative level of sales between Q1, Q2, and Q3 can vary from year to year.
+The drop from Q3 to Q4 is the only consistent pattern across the years looked at. Relative level of sales between Q1-Q2 and Q2-Q3 varies from year to year.
 
 Looking at patterns in % change between quarters confirms that either ends of the fiscal yr have the biggest changes:
 
@@ -162,7 +161,7 @@ plot <- trend_qtr %>% ggplot(aes(y=pc_chg_sales, x=qtr))+
 ggplotly(plot)
 ```
 
-The middle black line represents median for each quarter, with the colored area representing the range from 25% of the time to 75% of the time (1-3 quartiles).
+The middle black line represents median for each quarter, with the colored area representing the range from 25% of the time to 75% of the time (1st & 3rd quartiles).
 
 #### Litres
 
@@ -172,7 +171,8 @@ Overlaying litres sold by quarter for each year shows volume changes throughout 
 -   Q3 (Oct-Nov-Dec) sees drop, even with holidays, and then lower again for Q4 (Jan-Feb-Mar)
 
 ```{r}
-ch_title <- "Litres Comparison by Quarter (fiscal yr*)"
+#| fig-cap: BC LDB fiscal yr ends Mar 31
+ch_title <- "Litres Comparison by Quarter (fiscal yr end Mar 31)"
 plot <- trend_ttl_qtr %>% ggplot(aes(x=qtr, y=litres, color=factor(fyr), group=fyr))+
   geom_line()+
   geom_point()+
@@ -183,14 +183,12 @@ ggplotly(plot)
   
 ```
 
-\\\\\* BC LDB fiscal yr runs Apr - Mar.
-
 The different pattern compared to \$ sales likely represents the shift in drinking habits with the seasons:
 
--   peak volume is in Q2 - beer season, and beer, along with refreshment beverages, are consumer in higher volumes than the other types.
--   Q3, which is usually even with Q2 in \$ sales, has a consistent drop in volume compared to Q2, due to shift away from beer/refreshments beverages toward wine and spirits.
+-   peak volume (litres) is in Q2 - beer season, and beer, along with refreshment beverages, are consumer in higher volumes than the other types.
+-   Q3, which is usually even with Q2 in \$ sales, has a consistent drop in litre volume compared to Q2, due to shift away from beer/refreshments beverages toward wine and spirits.
 
-Patters by beverage type are looked at more below.
+Patterns by beverage type are looked at more below.
 
 Percentage changes from one quarter to the next reflect the different quarter-by-quarter patterns for litres.
 
@@ -235,7 +233,7 @@ trend_qtrs_cat$type <- as.factor(trend_qtrs_cat$type)
 Looking at quarter sales by beverage type reveals patterns we suspected earlier:
 
 -   **Beer and refreshment beverages tend to peak in Q2** and decline in Q3 and Q4.
--   **Wine and, especially, spirits peak in Q3** and offset the decline in beer and refreshment beverages.
+-   **Wine and, especially, spirits peak in Q3** and offset the decline in revenue from beer and refreshment beverages.
 
 ```{r}
 #| fig-cap: "black line = average"
@@ -258,6 +256,9 @@ Stacked chart highlights the shifts between Q2 and Q3:
 -   decline in \$ sales of Beer and Refreshment Beverages in Q3 almost completely offset by increase in wine and spirits.
 
 ```{r}
+#| fig-width: 5
+#| fig-height: 6
+#| fig-align: center
 trend_qtrs_cat$type <- fct_reorder(trend_qtrs_cat$type, trend_qtrs_cat$avg_netsales)
 
 ch_title <- "Breakdown in $ Sales per Qtr by Category"
