--- a/posts/bc-liquor-market-review-2023-06-pt03-beer/index.qmd
+++ b/posts/bc-liquor-market-review-2023-06-pt03-beer/index.qmd
@@ -32,6 +32,7 @@ library(RMariaDB) ## best way to access MySQL from R
 library(RColorBrewer)
 library(here)
 library(plotly)
+library(gridExtra)
 # set default theme
 theme_set(theme_classic())
 
@@ -96,16 +97,153 @@ Data goes back to 2015 (BC LDB Fiscal Year 2016, since fiscal yr ends in March).
 
 ### Overview
 
-We'll start with an annual overview across all categories and then look at trends for individual categories further down below.
+We'll start with an annual overview across all beer categories and then look at trends for individual categories further down below.
 
 ```{r, annual}
-trend_yr <- lmr_data %>% group_by(year, fyr) %>% summarize(
+# remove partial yrs - first identify complete yrs
+yr_qtr <- lmr_data %>% group_by(year, qtr) %>% summarize(count=1)
+yr_qtr <- yr_qtr %>% group_by(year) %>% summarize(count=n()) %>% filter(count==4)
+
+# summarize by calendar yr
+trend_yr <- lmr_data %>% group_by(year) %>% summarize(
   netsales=sum(netsales),
   litres=sum(litres)
-)
+) %>% filter(year %in% yr_qtr$year) ## include only complete yrs
 
+# add % chg YoY, $/l
+trend_yr <- trend_yr %>% mutate(
+  pc_chg_sales=netsales/lag(netsales)-1,
+  pc_chg_litres=litres/lag(litres)-1,
+  dollar_per_litre=netsales/litres,
+  pc_chg_d_per_l=dollar_per_litre/lag(dollar_per_litre)-1
+)
 ```
 
+```{r}
+# ch_title <- "Beer: Net Sales $ Trends - All Categories"
+# trend_yr %>% ggplot(aes(x=as.factor(year), y=netsales, group=1))+
+#   geom_line(color=bar_col, size=2)+
+#   geom_point(aes(y=netsales), color=bar_col, size=3)+
+#   scale_y_continuous(labels=comma_format(prefix="$", scale=1e-9,suffix="B"), expand=expansion(mult=c(0,0.1)), limits=c(0,max(trend_yr$netsales)))+
+#   labs(title=ch_title,y="",x="")+
+#   theme_classic() 
+```
+
+Beer sales have been pretty stable over the last few years, with peak in 2017 for litre sales at just under 300M and slight downward trend since then. Net \$ sales peaked around the same time and also trended down, but increased in 2022 with inflation.
+
+```{r, sales dual-axis}
+# try dual axis
+ch_title <- "BC Beer: Net Sales $ Trends + Litre Sales"
+trend_yr %>% ggplot(aes(x=as.factor(year), y=netsales, group=1))+
+  geom_line(color=bar_col, size=2)+
+  geom_point(aes(y=netsales), color=bar_col, size=3)+
+  geom_line(aes(x=as.factor(year), y=litres*3), size=2, color='royalblue')+
+  geom_point(aes(x=as.factor(year), y=litres*3), size=3, color='royalblue')+
+  scale_y_continuous(name='netsales',
+                      labels=comma_format(prefix="$", scale=1e-9,suffix="B"), 
+                     expand=expansion(mult=c(0,0.1)), limits=c(0,max(trend_yr$netsales)),
+                     sec.axis = sec_axis(trans=~./3, name='litres',
+                                         labels=comma_format(scale=1e-6, suffix="M")))+
+  labs(title=ch_title, x="")+
+  theme_classic()+
+  theme(
+    axis.title.y = element_text(color = bar_col, size=13),
+    axis.title.y.right = element_text(color = 'royalblue', size=13)
+  )
+```
+
+```{r}
+trend_yr_qtr <- lmr_data %>% group_by(end_qtr_dt) %>% summarize(
+  netsales=sum(netsales),
+  litres=sum(litres)
+) 
+```
+
+Breaking out litre sales by quarter confirms the downward trend.
+
+```{r}
+ch_title <- "BC Beer Litre Sales by Qtr, with Trend"
+trend_yr_qtr %>% ggplot(aes(x=end_qtr_dt, y=litres, group=1))+
+  geom_line(color=bar_col, size=2)+
+  #geom_point(aes(y=litres), color=bar_col, size=3)+
+  geom_smooth(method='lm', se=FALSE)+
+  scale_y_continuous(labels=comma_format(scale=1e-6,suffix="M"), 
+                     expand=expansion(mult=c(0,0.1)), limits=c(0,max(trend_yr_qtr$litres)))+
+  labs(title=ch_title, x="")
+```
+
+### Sales by Category
+
+BC LDB puts beer into 3 categories for purposes of the Liquor Market Report:
+
+-   **Domestic - BC Beer:** beer produced in BC.
+-   **Domestic - Other Province Beer:** beer produced in Canada outside BC.
+-   **Import Beer:** beer imported from outside Canada.
+
+```{r}
+#unique(lmr_data$category)
+trend_yr_cat <- lmr_data %>% group_by(year, category) %>% summarize(
+  netsales=sum(netsales),
+  litres=sum(litres)
+) %>% filter(year %in% yr_qtr$year) 
+
+# add % chg YoY, $/l
+# ungroup first; use n=3 to lag 3 rows to match categories
+trend_yr_cat <- trend_yr_cat %>% ungroup() %>% mutate(
+  pc_chg_sales=netsales/lag(netsales, n=3)-1,
+  pc_chg_litres=litres/lag(litres, n=3)-1,
+  dollar_per_litre=netsales/litres,
+  pc_chg_d_per_l=dollar_per_litre/lag(dollar_per_litre, n=3)-1
+)
+## clean up category names
+unique(trend_yr_cat$category)
+trend_yr_cat <- trend_yr_cat %>% mutate(
+  category=case_when(
+    category=='Domestic - BC Beer' ~ 'BC',
+    category=='Domestic - Other Province Beer' ~ 'Other Prov.',
+    category=='Import Beer' ~ 'Import'
+  )
+)
+```
+
+```{r}
+# reorder categories in order of litre sales
+trend_yr_cat$category <- fct_reorder(trend_yr_cat$category, trend_yr_cat$litres)
+
+ch_title <- "BC Beer Litre Sales by Category"
+plot_left <- trend_yr_cat %>% ggplot(aes(x=as.factor(year), y=litres, fill=category))+
+  geom_col()+
+  scale_y_continuous(labels=comma_format(scale=1e-6,suffix="M"), 
+                     expand=expansion(add=c(0,0.1)))+
+  #scale_fill_manual(values=type_color)+
+  labs(title=ch_title, x="",y="")+
+  theme(axis.ticks.x = element_blank())
+
+ch_title <- "BC Beer Litre Sales by Category"
+plot_right <- trend_yr_cat %>% ggplot(aes(x=as.factor(year), y=litres, fill=category))+
+  geom_col(position='fill')+
+  scale_y_continuous(labels=percent_format(), 
+                     expand=expansion(add=c(0,0.1)))+
+  #scale_fill_manual(values=type_color)+
+  labs(title=ch_title, x="",y="")+
+  theme(axis.ticks.x = element_blank())
+grid.arrange(plot_left, plot_right, ncol=2)
+```
+
+## questions
+
+-   breakdown by major category
+    -   by year -\> \$ sales and litre sales
+        -   changes in composition?
+    -   yoy change
+-   within each major category
+    -   annual trends -\> \$ sales and litre sales
+        -   changes in composition?
+    -   yoy change -\> what are the biggest gainers / losers?
+
+## == old info
+
+### Quarter Data
 
 ```{r, calc_qtr}
 # roll-up categories by qtr
@@ -134,7 +272,7 @@ trend_qtrs <- trend_qtr %>% group_by(qtr) %>% summarize(
 )
 ```
 
-#### \$ Sales
+#### \$ Qtr Sales
 
 Overlay of \$ sales data for quarter of each year to see overall trends:
 
